fix alignment footer bottom

--- a/css/footer.css
+++ b/css/footer.css
@@ -17,8 +17,6 @@
 }
 
 
-
-
 body {
     background-color: #0f1828;
     margin: 0;
@@ -112,7 +110,6 @@ body {
     line-height: 2rem; 
 }
 
-
 /* Social Media Group */
 
 .footer__socmed {
@@ -157,11 +154,7 @@ body {
     height: 24px;
 }
 
-
-
 /* Footer Bottom Section */
-
-
 
 .footer__bottom {
     text-align: center;
@@ -170,11 +163,9 @@ body {
 hr {  
     border: 1px solid #FFFFFF33;
     width: 90%;
+    margin-bottom: 2rem;
   }
 
-.footer__bottom-footnote {
-    flex-direction: column;
-}
 
 .footer__bottom-footnote, .footer__bottom-footnote-top {
     display: flex;
@@ -182,10 +173,33 @@ hr {
     align-items: center;
 }
 
+.footer__bottom-footnote-top {
+    flex-direction: column;
+}
+
+.footer__bottom-footnote {
+    flex-direction: column;
+}
+
 .footer__bottom-footnote-content {
-    margin-left: 0.5rem;
-    padding-bottom: 0;
-    font-size: small; 
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+} 
+
+.footer__bottom-footnote-icons {
+    gap: 8px;
+    margin-right: 8px;
+}
+
+.footer__bottom-footnote-text {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0.5px;
+    text-align: left;
+    margin: 0.5rem;
 }
 
 .footer__socmed-textlink {
